force-app/main/default/objects/ZSFMatBase__x/ZSFMatBase__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>ZSFMatBaseSet</externalName>
    <label>ZSFMatBase</label>
    <pluralLabel>ZSFMatBaseSet</pluralLabel>
</CustomObject>