force-app/main/default/objects/ZSFMatBase__x/fields/Altura__c.field-meta.xml
<CustomField>
    <fullName>Altura__c</fullName>
    <description>Altura</description>
    <externalDeveloperName>Altura</externalDeveloperName>
    <label>Altura</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>