force-app/main/default/objects/ZSFMatBase__x/fields/Ancho__c.field-meta.xml
<CustomField>
    <fullName>Ancho__c</fullName>
    <description>Ancho</description>
    <externalDeveloperName>Ancho</externalDeveloperName>
    <label>Ancho</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>