force-app/main/default/objects/ZSFMatBase__x/fields/CjPal__c.field-meta.xml
<CustomField>
    <fullName>CjPal__c</fullName>
    <description>CjPal</description>
    <externalDeveloperName>CjPal</externalDeveloperName>
    <label>CjPal</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>