force-app/main/default/objects/ZSFMatBase__x/fields/GrupoArticulos__c.field-meta.xml
<CustomField>
    <fullName>GrupoArticulos__c</fullName>
    <description>GrupoArticulos</description>
    <externalDeveloperName>GrupoArticulos</externalDeveloperName>
    <label>GrupoArticulos</label>
    <length>9</length>
    <type>Text</type>
</CustomField>