force-app/main/default/objects/ZSFMatBase__x/fields/IsSample__c.field-meta.xml
<CustomField>
    <fullName>IsSample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsSample</description>
    <externalDeveloperName>IsSample</externalDeveloperName>
    <label>IsSample</label>
    <type>Checkbox</type>
</CustomField>