force-app/main/default/objects/ZSFMatBase__x/fields/IsSampleAccessory__c.field-meta.xml
<CustomField>
    <fullName>IsSampleAccessory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsSampleAccessory</description>
    <externalDeveloperName>IsSampleAccessory</externalDeveloperName>
    <label>IsSampleAccessory</label>
    <type>Checkbox</type>
</CustomField>