force-app/main/default/objects/ZSFMatBase__x/fields/Jerarquia__c.field-meta.xml
<CustomField>
    <fullName>Jerarquia__c</fullName>
    <description>Jerarquia</description>
    <externalDeveloperName>Jerarquia</externalDeveloperName>
    <label>Jerarquia</label>
    <length>18</length>
    <type>Text</type>
</CustomField>