force-app/main/default/objects/ZSFMatBase__x/fields/Longitud__c.field-meta.xml
<CustomField>
    <fullName>Longitud__c</fullName>
    <description>Longitud</description>
    <externalDeveloperName>Longitud</externalDeveloperName>
    <label>Longitud</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>