force-app/main/default/objects/ZSFMatBase__x/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <description>Marca</description>
    <externalDeveloperName>Marca</externalDeveloperName>
    <label>Marca</label>
    <length>20</length>
    <type>Text</type>
</CustomField>