force-app/main/default/objects/ZSFMatBase__x/fields/Materia__c.field-meta.xml
<CustomField>
    <fullName>Materia__c</fullName>
    <description>Materia</description>
    <externalDeveloperName>Materia</externalDeveloperName>
    <label>Materia</label>
    <length>48</length>
    <type>Text</type>
</CustomField>