force-app/main/default/objects/ZSFMatBase__x/fields/Mt2Cj__c.field-meta.xml
<CustomField>
    <fullName>Mt2Cj__c</fullName>
    <description>Mt2Cj</description>
    <externalDeveloperName>Mt2Cj</externalDeveloperName>
    <label>Mt2Cj</label>
    <precision>13</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>