force-app/main/default/objects/ZSFMatBase__x/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <description>Nombre</description>
    <externalDeveloperName>Nombre</externalDeveloperName>
    <label>Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>