force-app/main/default/objects/ZSFMatBase__x/fields/PesoUMV__c.field-meta.xml
<CustomField>
    <fullName>PesoUMV__c</fullName>
    <label>KG x UMV</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>