force-app/main/default/objects/ZSFMatBase__x/fields/PzsCj__c.field-meta.xml
<CustomField>
    <fullName>PzsCj__c</fullName>
    <description>PzsCj</description>
    <externalDeveloperName>PzsCj</externalDeveloperName>
    <label>PzsCj</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>