force-app/main/default/objects/ZSFMatBase__x/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <description>Ramo</description>
    <externalDeveloperName>Ramo</externalDeveloperName>
    <label>Ramo</label>
    <length>1</length>
    <type>Text</type>
</CustomField>