force-app/main/default/objects/ZSFMatBase__x/fields/TipoMaterial__c.field-meta.xml
<CustomField>
    <fullName>TipoMaterial__c</fullName>
    <description>TipoMaterial</description>
    <externalDeveloperName>TipoMaterial</externalDeveloperName>
    <label>TipoMaterial</label>
    <length>4</length>
    <type>Text</type>
</CustomField>