force-app/main/default/objects/ZSFMatBase__x/fields/Umb__c.field-meta.xml
<CustomField>
    <fullName>Umb__c</fullName>
    <description>Umb</description>
    <externalDeveloperName>Umb</externalDeveloperName>
    <label>Umb</label>
    <length>3</length>
    <type>Text</type>
</CustomField>