force-app/main/default/objects/ZSFMatBase__x/fields/UmbCj__c.field-meta.xml
<CustomField>
    <fullName>UmbCj__c</fullName>
    <description>UmbCj</description>
    <externalDeveloperName>UmbCj</externalDeveloperName>
    <label>UmbCj</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>