force-app/main/default/objects/ZSFMatBase__x/fields/UmbKg__c.field-meta.xml
<CustomField>
    <fullName>UmbKg__c</fullName>
    <description>UmbKg</description>
    <externalDeveloperName>UmbKg</externalDeveloperName>
    <label>UmbKg</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>