force-app/main/default/objects/ZSFMatBase__x/fields/UmbMt2__c.field-meta.xml
<CustomField>
    <fullName>UmbMt2__c</fullName>
    <description>UmbMt2</description>
    <externalDeveloperName>UmbMt2</externalDeveloperName>
    <label>UmbMt2</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>