force-app/main/default/objects/ZSFMatBase__x/fields/UmbPal__c.field-meta.xml
<CustomField>
    <fullName>UmbPal__c</fullName>
    <description>UmbPal</description>
    <externalDeveloperName>UmbPal</externalDeveloperName>
    <label>UmbPal</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>