force-app/main/default/objects/ZSFMatBase__x/fields/UrlDisplay__c.field-meta.xml
<CustomField>
    <fullName>UrlDisplay__c</fullName>
    <description>UrlDisplay</description>
    <externalDeveloperName>UrlDisplay</externalDeveloperName>
    <label>UrlDisplay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>