force-app/main/default/objects/ZSFMatBase__x/fields/UrlPdf__c.field-meta.xml
<CustomField>
    <fullName>UrlPdf__c</fullName>
    <description>UrlPdf</description>
    <externalDeveloperName>UrlPdf</externalDeveloperName>
    <label>UrlPdf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>