force-app/main/default/objects/ZSFMatBase__x/fields/UrlPhoto1__c.field-meta.xml
<CustomField>
    <fullName>UrlPhoto1__c</fullName>
    <description>UrlPhoto1</description>
    <externalDeveloperName>UrlPhoto1</externalDeveloperName>
    <label>UrlPhoto1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>