force-app/main/default/objects/ZSFMatBase__x/fields/UrlPhoto2__c.field-meta.xml
<CustomField>
    <fullName>UrlPhoto2__c</fullName>
    <description>UrlPhoto2</description>
    <externalDeveloperName>UrlPhoto2</externalDeveloperName>
    <label>UrlPhoto2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>