force-app/main/default/objects/ZSFMatBase__x/fields/UrlPhoto3__c.field-meta.xml
<CustomField>
    <fullName>UrlPhoto3__c</fullName>
    <description>UrlPhoto3</description>
    <externalDeveloperName>UrlPhoto3</externalDeveloperName>
    <label>UrlPhoto3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>